#history
#change freetype VERSION                     2018.1.25
#specify the libjpeg, we have 2 different libjpeg version . one is come with 
#osg_3rdpart. the other is our own's version in 3rdpart directory.  2018.1.26
 
PROJECT(ossimcore)
SET(CMAKE_DEBUG_POSTFIX "d")


IF(NOT APPLE)
  cmake_minimum_required(VERSION 2.6)
ELSE(NOT APPLE)
  cmake_minimum_required(VERSION 2.8)
ENDIF(NOT APPLE)


IF(CMAKE_CL_64)
    SET(PLATFORM x64)    
ELSE(CMAKE_CL_64)
    SET(PLATFORM x86)
ENDIF(CMAKE_CL_64)







# Set our include paths:


include_directories( ${PROJECT_SOURCE_DIR}/include
         ${PROJECT_BINARY_DIR}/include
         ${OPEN_THREAD_INC}
         ${TIFF_INC}
         ${GEOTIFF_INC}
         ${GEOTIFF_INC}/libxtiff
         ${FREETYPE_INC}
         ${JPEG_INC} 
         ${OSG_3RDPART_INC})





link_directories(${OSG_LINK_DIR}
     ${OSG_3RDPART_LINK_DIR}
     ${JPEG_LINK_DIR}
     ${TIFF_LINK_DIR}
     ${GEOTIFF_LINK_DIR})









SET(BASE_SRC src/ossim/base/ossim2dBilinearTransform.cpp 
           src/ossim/base/ossim2dLinearRegression.cpp 
           src/ossim/base/ossim2dTo2dIdentityTransform.cpp 
           src/ossim/base/ossim2dTo2dShiftTransform.cpp 
           src/ossim/base/ossim2dTo2dTransform.cpp 
           src/ossim/base/ossim2dTo2dTransformFactory.cpp 
           src/ossim/base/ossim2dTo2dTransformRegistry.cpp 
           src/ossim/base/ossimActiveEdgeTable.cpp 
           src/ossim/base/ossimAdjSolutionAttributes.cpp 
           src/ossim/base/ossimAdjustableParameterInfo.cpp 
           src/ossim/base/ossimAdjustableParameterInterface.cpp 
           src/ossim/base/ossimAdjustmentExecutive.cpp 
           src/ossim/base/ossimAdjustmentInfo.cpp 
           src/ossim/base/ossimAffineTransform.cpp 
           src/ossim/base/ossimApplicationUsage.cpp 
           src/ossim/base/ossimArgumentParser.cpp 
           src/ossim/base/ossimBaseObjectFactory.cpp 
           src/ossim/base/ossimBilSplitter.cpp 
           src/ossim/base/ossimBooleanProperty.cpp 
           src/ossim/base/ossimByteStreamBuffer.cpp 
           src/ossim/base/ossimCmyVector.cpp 
           src/ossim/base/ossimColorProperty.cpp 
           src/ossim/base/ossimColumnVector3d.cpp 
           src/ossim/base/ossimCommon.cpp 
           src/ossim/base/ossimConnectableContainer.cpp 
           src/ossim/base/ossimConnectableContainerInterface.cpp 
           src/ossim/base/ossimConnectableDisplayListener.cpp 
           src/ossim/base/ossimConnectableObject.cpp 
           src/ossim/base/ossimConnectableObjectListener.cpp 
           src/ossim/base/ossimConnectionEvent.cpp 
           src/ossim/base/ossimContainerEvent.cpp 
           src/ossim/base/ossimContainerProperty.cpp 
           src/ossim/base/ossimCplUtil.cpp 
           src/ossim/base/ossimCsvFile.cpp 
           src/ossim/base/ossimCustomEditorWindow.cpp 
           src/ossim/base/ossimCustomEditorWindowFactoryBase.cpp 
           src/ossim/base/ossimCustomEditorWindowRegistry.cpp 
           src/ossim/base/ossimDataObject.cpp 
           src/ossim/base/ossimDate.cpp 
           src/ossim/base/ossimDateProperty.cpp 
           src/ossim/base/ossimDatum.cpp 
           src/ossim/base/ossimDatumFactory.cpp 
           src/ossim/base/ossimDatumFactoryRegistry.cpp 
           src/ossim/base/ossimDblGrid.cpp 
           src/ossim/base/ossimDirectory.cpp 
           src/ossim/base/ossimDirectoryData.cpp 
           src/ossim/base/ossimDirectoryTree.cpp 
           src/ossim/base/ossimDisplayEventListener.cpp 
           src/ossim/base/ossimDisplayInterface.cpp 
           src/ossim/base/ossimDisplayListEvent.cpp 
           src/ossim/base/ossimDisplayRefreshEvent.cpp 
           src/ossim/base/ossimDms.cpp 
           src/ossim/base/ossimDoubleGridProperty.cpp 
           src/ossim/base/ossimDpt.cpp 
           src/ossim/base/ossimDpt3d.cpp 
           src/ossim/base/ossimDrect.cpp 
           src/ossim/base/ossimDuration.cpp 
           src/ossim/base/ossimEbcdicToAscii.cpp 
           src/ossim/base/ossimEcefPoint.cpp 
           src/ossim/base/ossimEcefRay.cpp 
           src/ossim/base/ossimEcefVector.cpp 
           src/ossim/base/ossimElevationManagerEvent.cpp 
           src/ossim/base/ossimElevationManagerEventListener.cpp 
           src/ossim/base/ossimEllipsoid.cpp 
           src/ossim/base/ossimEllipsoidFactory.cpp 
           src/ossim/base/ossimEndian.cpp 
           src/ossim/base/ossimEnvironmentUtility.cpp 
           src/ossim/base/ossimEpsgDatumFactory.cpp 
           src/ossim/base/ossimEquTokenizer.cpp 
           src/ossim/base/ossimErrorCodes.cpp 
           src/ossim/base/ossimErrorStatusInterface.cpp 
           src/ossim/base/ossimEvent.cpp 
           src/ossim/base/ossimException.cpp 
           src/ossim/base/ossimFactoryBaseTemplate.cpp 
           src/ossim/base/ossimFilename.cpp 
           src/ossim/base/ossimFilenameProperty.cpp 
           src/ossim/base/ossimFontInformation.cpp 
           src/ossim/base/ossimFontProperty.cpp 
           src/ossim/base/ossimFpt.cpp 
           src/ossim/base/ossimFpt3d.cpp 
           src/ossim/base/ossimGeocent.c 
           src/ossim/base/ossimGeodeticEvaluator.cpp 
           src/ossim/base/ossimGeoid.cpp 
           src/ossim/base/ossimGeoidEgm96.cpp 
           src/ossim/base/ossimGeoidManager.cpp 
           src/ossim/base/ossimGeoidNgs.cpp 
           src/ossim/base/ossimGeoidNgsHeader.cpp 
           src/ossim/base/ossimGeoPolygon.cpp 
           src/ossim/base/ossimGeoref.cpp 
           src/ossim/base/ossimGeoTiffCoordTransformsLut.cpp 
           src/ossim/base/ossimGeoTiffDatumLut.cpp 
           src/ossim/base/ossimGpt.cpp 
           src/ossim/base/ossimGrect.cpp 
           src/ossim/base/ossimGzStream.cpp 
           src/ossim/base/ossimHexString.cpp 
           src/ossim/base/ossimHistogram.cpp 
           src/ossim/base/ossimHistogramSource.cpp 
           src/ossim/base/ossimHsiVector.cpp 
           src/ossim/base/ossimHsvVector.cpp 
           src/ossim/base/ossimHttpRequest.cpp 
           src/ossim/base/ossimHttpResponse.cpp 
           src/ossim/base/ossimId.cpp 
           src/ossim/base/ossimIdManager.cpp 
           src/ossim/base/ossimImageAoiListener.cpp 
           src/ossim/base/ossimImageGeometryEvent.cpp 
           src/ossim/base/ossimImageGeometryEventListener.cpp 
           src/ossim/base/ossimImageTypeLut.cpp 
           src/ossim/base/ossimInterleaveTypeLut.cpp 
           src/ossim/base/ossimIoStream.cpp 
           src/ossim/base/ossimIpt.cpp 
           src/ossim/base/ossimIrect.cpp 
           src/ossim/base/ossimJpegYCbCrVector.cpp 
           src/ossim/base/ossimKeyword.cpp 
           src/ossim/base/ossimKeywordlist.cpp 
           src/ossim/base/ossimKeywordNames.cpp 
           src/ossim/base/ossimLagrangeInterpolator.cpp 
           src/ossim/base/ossimLeastSquaresBilin.cpp 
           src/ossim/base/ossimLine.cpp 
           src/ossim/base/ossimListener.cpp 
           src/ossim/base/ossimListenerManager.cpp 
           src/ossim/base/ossimLookUpTable.cpp 
           src/ossim/base/ossimLsrPoint.cpp 
           src/ossim/base/ossimLsrRay.cpp 
           src/ossim/base/ossimLsrSpace.cpp 
           src/ossim/base/ossimLsrVector.cpp 
           src/ossim/base/ossimMatrix3x3.cpp 
           src/ossim/base/ossimMatrix4x4.cpp 
           src/ossim/base/ossimMatrixProperty.cpp 
           src/ossim/base/ossimMouseEvent.cpp 
           src/ossim/base/ossimMouseListener.cpp 
           src/ossim/base/ossimMultiBandHistogram.cpp 
           src/ossim/base/ossimMultiResLevelHistogram.cpp 
           src/ossim/base/ossimNadconGridDatum.cpp 
           src/ossim/base/ossimNadconGridFile.cpp 
           src/ossim/base/ossimNadconGridHeader.cpp 
           src/ossim/base/ossimNadconNarDatum.cpp 
           src/ossim/base/ossimNadconNasDatum.cpp 
           src/ossim/base/ossimNBandLutDataObject.cpp 
           src/ossim/base/ossimNormRgbVector.cpp 
           src/ossim/base/ossimNotify.cpp 
           src/ossim/base/ossimNumericProperty.cpp 
           src/ossim/base/ossimObject.cpp 
           src/ossim/base/ossimObjectDestructingEvent.cpp 
           src/ossim/base/ossimObjectFactory.cpp 
           src/ossim/base/ossimObjectFactoryRegistry.cpp 
           src/ossim/base/ossimObservationSet.cpp 
           src/ossim/base/ossimOutputSource.cpp 
           src/ossim/base/ossimPackedBits.cpp 
           src/ossim/base/ossimPointObservation.cpp 
           src/ossim/base/ossimPolyArea2d.cpp 
           src/ossim/base/ossimPolygon.cpp 
           src/ossim/base/ossimPolyLine.cpp 
           src/ossim/base/ossimPreferences.cpp 
           src/ossim/base/ossimProcessInterface.cpp 
           src/ossim/base/ossimProcessListener.cpp 
           src/ossim/base/ossimProcessProgressEvent.cpp 
           src/ossim/base/ossimProperty.cpp 
           src/ossim/base/ossimPropertyInterface.cpp 
           src/ossim/base/ossimPropertyInterfaceFactory.cpp 
           src/ossim/base/ossimPropertyInterfaceRegistry.cpp 
           src/ossim/base/ossimQuadrilateralMap.cpp 
           src/ossim/base/ossimQuadTreeWarp.cpp 
           src/ossim/base/ossimQuaternion.cpp 
           src/ossim/base/ossimRationalNumber.cpp 
           src/ossim/base/ossimRectanglePartitioner.cpp 
           src/ossim/base/ossimRectilinearDataObject.cpp 
           src/ossim/base/ossimReferenced.cpp 
           src/ossim/base/ossimRefreshEvent.cpp 
           src/ossim/base/ossimRegExp.cpp 
           src/ossim/base/ossimRgbLutDataObject.cpp 
           src/ossim/base/ossimRgbVector.cpp 
           src/ossim/base/ossimROIEvent.cpp 
           src/ossim/base/ossimROIEventListener.cpp 
           src/ossim/base/ossimRtti.cpp 
           src/ossim/base/ossimScalarTypeLut.cpp 
           src/ossim/base/ossimSevenParamDatum.cpp 
           src/ossim/base/ossimSource.cpp 
           src/ossim/base/ossimStateChangedEvent.cpp 
           src/ossim/base/ossimStdOutProgress.cpp 
           src/ossim/base/ossimStreamBase.cpp 
           src/ossim/base/ossimStreamFactory.cpp 
           src/ossim/base/ossimStreamFactoryRegistry.cpp 
           src/ossim/base/ossimString.cpp 
           src/ossim/base/ossimStringListProperty.cpp 
           src/ossim/base/ossimStringProperty.cpp 
           src/ossim/base/ossimTDpt.cpp 
           src/ossim/base/ossimTempFilename.cpp 
           src/ossim/base/ossimTextProperty.cpp 
           src/ossim/base/ossimThinPlateSpline.cpp 
           src/ossim/base/ossimThreeParamDatum.cpp 
           src/ossim/base/ossimTieGpt.cpp 
           src/ossim/base/ossimTieGptSet.cpp 
           src/ossim/base/ossimTiledImageHash.cpp 
           src/ossim/base/ossimTileHash.cpp 
           src/ossim/base/ossimTimer.cpp 
           src/ossim/base/ossimTrace.cpp 
           src/ossim/base/ossimTraceManager.cpp 
           src/ossim/base/ossimUnitConversionTool.cpp 
           src/ossim/base/ossimUnitTypeLut.cpp 
           src/ossim/base/ossimUrl.cpp 
           src/ossim/base/ossimUsgsQuad.cpp 
           src/ossim/base/ossimViewController.cpp 
           src/ossim/base/ossimViewEvent.cpp 
           src/ossim/base/ossimViewInterface.cpp 
           src/ossim/base/ossimViewListener.cpp 
           src/ossim/base/ossimVisitor.cpp 
           src/ossim/base/ossimVrect.cpp 
           src/ossim/base/ossimWebRequest.cpp 
           src/ossim/base/ossimWebRequestFactoryBase.cpp 
           src/ossim/base/ossimWebRequestFactoryRegistry.cpp 
           src/ossim/base/ossimWebResponse.cpp 
           src/ossim/base/ossimWgs72Datum.cpp 
           src/ossim/base/ossimWgs84Datum.cpp 
           src/ossim/base/ossimWLSBundleSolution.cpp 
           src/ossim/base/ossimWms.cpp 
           src/ossim/base/ossimXmlAttribute.cpp 
           src/ossim/base/ossimXmlDocument.cpp 
           src/ossim/base/ossimXmlNode.cpp 
           src/ossim/base/ossimXmlString.cpp 
           src/ossim/matrix/bandmat.cpp 
           src/ossim/matrix/cholesky.cpp 
           src/ossim/matrix/evalue.cpp 
           src/ossim/matrix/fft.cpp 
           src/ossim/matrix/hholder.cpp 
           src/ossim/matrix/jacobi.cpp 
           src/ossim/matrix/myexcept.cpp 
           src/ossim/matrix/newfft.cpp 
           src/ossim/matrix/newmat1.cpp 
           src/ossim/matrix/newmat2.cpp 
           src/ossim/matrix/newmat3.cpp 
           src/ossim/matrix/newmat4.cpp 
           src/ossim/matrix/newmat5.cpp 
           src/ossim/matrix/newmat6.cpp 
           src/ossim/matrix/newmat7.cpp 
           src/ossim/matrix/newmat8.cpp 
           src/ossim/matrix/newmat9.cpp 
           src/ossim/matrix/newmatex.cpp 
           src/ossim/matrix/newmatnl.cpp 
           src/ossim/matrix/newmatrm.cpp 
           src/ossim/matrix/solution.cpp 
           src/ossim/matrix/sort.cpp 
           src/ossim/matrix/submat.cpp 
           src/ossim/matrix/svd.cpp 
           src/ossim/vpfutil/bitarray.c 
           src/ossim/vpfutil/distance.c 
           src/ossim/vpfutil/linklist.c 
           src/ossim/vpfutil/polygrf.c 
           src/ossim/vpfutil/set.c 
           src/ossim/vpfutil/vpfclip.c 
           src/ossim/vpfutil/vpfcntnt.c 
           src/ossim/vpfutil/vpfdict.c 
           src/ossim/vpfutil/vpfdisp.c 
           src/ossim/vpfutil/vpfdraw.c 
           src/ossim/vpfutil/vpfmisc.c 
           src/ossim/vpfutil/vpfnear.c 
           src/ossim/vpfutil/vpfprim.c 
           src/ossim/vpfutil/vpfptply.c 
           src/ossim/vpfutil/vpfquery.c 
           src/ossim/vpfutil/vpfread.c 
           src/ossim/vpfutil/vpfrelat.c 
           src/ossim/vpfutil/vpfselec.c 
           src/ossim/vpfutil/vpfspx.c 
           src/ossim/vpfutil/vpftable.c 
           src/ossim/vpfutil/vpftidx.c 
           src/ossim/vpfutil/vpfwrite.c
           src/ossim/dll_main/ossimDllMain.cpp 
           src/ossim/elevation/ossimDtedElevationDatabase.cpp 
           src/ossim/elevation/ossimDtedFactory.cpp 
           src/ossim/elevation/ossimDtedHandler.cpp 
           src/ossim/elevation/ossimElevationDatabase.cpp 
           src/ossim/elevation/ossimElevationDatabaseFactory.cpp 
           src/ossim/elevation/ossimElevationDatabaseRegistry.cpp 
           src/ossim/elevation/ossimElevCellHandler.cpp 
           src/ossim/elevation/ossimElevCellHandlerFactory.cpp 
           src/ossim/elevation/ossimElevManager.cpp 
           src/ossim/elevation/ossimElevSource.cpp 
           src/ossim/elevation/ossimElevSourceFactory.cpp 
           src/ossim/elevation/ossimGeneralRasterElevationDatabase.cpp 
           src/ossim/elevation/ossimGeneralRasterElevFactory.cpp 
           src/ossim/elevation/ossimGeneralRasterElevHandler.cpp 
           src/ossim/elevation/ossimHgtRef.cpp 
           src/ossim/elevation/ossimImageElevationDatabase.cpp 
           src/ossim/elevation/ossimImageElevationHandler.cpp 
           src/ossim/elevation/ossimSrtmElevationDatabase.cpp 
           src/ossim/elevation/ossimSrtmFactory.cpp 
           src/ossim/elevation/ossimSrtmHandler.cpp 
           src/ossim/elevation/ossimTiledElevationDatabase.cpp 
           src/ossim/font/ossimFont.cpp 
           src/ossim/font/ossimFontFactoryRegistry.cpp 
           src/ossim/font/ossimFreeTypeFont.cpp 
           src/ossim/font/ossimFreeTypeFontFactory.cpp 
           src/ossim/font/ossimGdBitmapFont.cpp 
           src/ossim/imaging/ossim3x3ConvolutionFilter.cpp 
           src/ossim/imaging/ossimAdrgHeader.cpp 
           src/ossim/imaging/ossimAdrgTileSource.cpp 
           src/ossim/imaging/ossimAnnotationEllipseObject.cpp 
           src/ossim/imaging/ossimAnnotationFontObject.cpp 
           src/ossim/imaging/ossimAnnotationGdBitmapFont.cpp 
           src/ossim/imaging/ossimAnnotationLineObject.cpp 
           src/ossim/imaging/ossimAnnotationMultiEllipseObject.cpp 
           src/ossim/imaging/ossimAnnotationMultiLineObject.cpp 
           src/ossim/imaging/ossimAnnotationMultiPolyLineObject.cpp 
           src/ossim/imaging/ossimAnnotationMultiPolyObject.cpp 
           src/ossim/imaging/ossimAnnotationObject.cpp 
           src/ossim/imaging/ossimAnnotationObjectFactory.cpp 
           src/ossim/imaging/ossimAnnotationPolyObject.cpp 
           src/ossim/imaging/ossimAnnotationSource.cpp 
           src/ossim/imaging/ossimAOD.cpp 
           src/ossim/imaging/ossimAppFixedTileCache.cpp 
           src/ossim/imaging/ossimAppTileCache.cpp 
           src/ossim/imaging/ossimArcInfoGridWriter.cpp 
           src/ossim/imaging/ossimAtbController.cpp 
           src/ossim/imaging/ossimAtbMatchPoint.cpp 
           src/ossim/imaging/ossimAtbPointSource.cpp 
           src/ossim/imaging/ossimAtCorrGridRemapper.cpp 
           src/ossim/imaging/ossimAtCorrRemapper.cpp 
           src/ossim/imaging/ossimBandAverageFilter.cpp 
           src/ossim/imaging/ossimBandClipFilter.cpp 
           src/ossim/imaging/ossimBandMergeSource.cpp 
           src/ossim/imaging/ossimBandSelector.cpp 
           src/ossim/imaging/ossimBandSeparateHandler.cpp 
           src/ossim/imaging/ossimBitMaskTileSource.cpp 
           src/ossim/imaging/ossimBitMaskWriter.cpp 
           src/ossim/imaging/ossimBlendMosaic.cpp 
           src/ossim/imaging/ossimBrightnessContrastSource.cpp 
           src/ossim/imaging/ossimBrightnessMatch.cpp 
           src/ossim/imaging/ossimBumpShadeTileSource.cpp 
           src/ossim/imaging/ossimCacheTileSource.cpp 
           src/ossim/imaging/ossimCastTileSourceFilter.cpp 
           src/ossim/imaging/ossimCcfHead.cpp 
           src/ossim/imaging/ossimCcfTileSource.cpp 
           src/ossim/imaging/ossimCibCadrgTileSource.cpp 
           src/ossim/imaging/ossimClosestToCenterCombiner.cpp 
           src/ossim/imaging/ossimColorNormalizedFusion.cpp 
           src/ossim/imaging/ossimConvolutionFilter1D.cpp 
           src/ossim/imaging/ossimConvolutionSource.cpp 
           src/ossim/imaging/ossimDdffield.cpp 
           src/ossim/imaging/ossimDdffielddefn.cpp 
           src/ossim/imaging/ossimDdfmodule.cpp 
           src/ossim/imaging/ossimDdfrecord.cpp 
           src/ossim/imaging/ossimDdfsubfielddefn.cpp 
           src/ossim/imaging/ossimDdfutils.cpp 
           src/ossim/imaging/ossimDespeckleFilter.cpp 
           src/ossim/imaging/ossimDiscrete3x3HatFilter.cpp 
           src/ossim/imaging/ossimDiscreteConvolutionKernel.cpp 
           src/ossim/imaging/ossimDoqqTileSource.cpp 
           src/ossim/imaging/ossimDtedTileSource.cpp 
           src/ossim/imaging/ossimEastingNorthingCutter.cpp 
           src/ossim/imaging/ossimEdgeFilter.cpp 
           src/ossim/imaging/ossimElevImageSource.cpp 
           src/ossim/imaging/ossimEnviHeaderFileWriter.cpp 
           src/ossim/imaging/ossimEnviTileSource.cpp 
           src/ossim/imaging/ossimEquationCombiner.cpp 
           src/ossim/imaging/ossimERSFileWriter.cpp 
           src/ossim/imaging/ossimERSTileSource.cpp 
           src/ossim/imaging/ossimEsriShapeFileInterface.cpp 
           src/ossim/imaging/ossimFeatherMosaic.cpp 
           src/ossim/imaging/ossimFftFilter.cpp 
           src/ossim/imaging/ossimFgdcFileWriter.cpp 
           src/ossim/imaging/ossimFilter.cpp 
           src/ossim/imaging/ossimFilterResampler.cpp 
           src/ossim/imaging/ossimFilterTable.cpp 
           src/ossim/imaging/ossimFixedTileCache.cpp 
           src/ossim/imaging/ossimFusionCombiner.cpp 
           src/ossim/imaging/ossimGammaRemapper.cpp 
           src/ossim/imaging/ossimGeneralRasterInfo.cpp 
           src/ossim/imaging/ossimGeneralRasterTileSource.cpp 
           src/ossim/imaging/ossimGeneralRasterWriter.cpp 
           src/ossim/imaging/ossimGeoAnnotationBitmap.cpp 
           src/ossim/imaging/ossimGeoAnnotationEllipseObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationFontObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationGdBitmapFont.cpp 
           src/ossim/imaging/ossimGeoAnnotationLineObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationMultiEllipseObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationMultiPolyLineObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationMultiPolyObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationPolyLineObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationPolyObject.cpp 
           src/ossim/imaging/ossimGeoAnnotationSource.cpp 
           src/ossim/imaging/ossimGeographicAnnotationGrid.cpp 
           src/ossim/imaging/ossimGeomFileWriter.cpp 
           src/ossim/imaging/ossimGeoPolyCutter.cpp 
           src/ossim/imaging/ossimGridRemapEngine.cpp 
           src/ossim/imaging/ossimGridRemapEngineFactory.cpp 
           src/ossim/imaging/ossimGridRemapSource.cpp 
           src/ossim/imaging/ossimHistogramEqualization.cpp 
           src/ossim/imaging/ossimHistogramMatchFilter.cpp 
           src/ossim/imaging/ossimHistogramRemapper.cpp 
           src/ossim/imaging/ossimHistogramThreshholdFilter.cpp 
           src/ossim/imaging/ossimHistogramWriter.cpp 
           src/ossim/imaging/ossimHistoMatchRemapper.cpp 
           src/ossim/imaging/ossimHsiRemapper.cpp 
           src/ossim/imaging/ossimHsiToRgbSource.cpp 
           src/ossim/imaging/ossimHsvGridRemapEngine.cpp 
           src/ossim/imaging/ossimHsvToRgbSource.cpp 
           src/ossim/imaging/ossimIgenGenerator.cpp 
           src/ossim/imaging/ossimImageCacheBase.cpp 
           src/ossim/imaging/ossimImageCacheTileSource.cpp 
           src/ossim/imaging/ossimImageChain.cpp 
           src/ossim/imaging/ossimImageCombiner.cpp 
           src/ossim/imaging/ossimImageData.cpp 
           src/ossim/imaging/ossimImageDataFactory.cpp 
           src/ossim/imaging/ossimImageDataHelper.cpp 
           src/ossim/imaging/ossimImageDisplayWriter.cpp 
           src/ossim/imaging/ossimImageFileWriter.cpp 
           src/ossim/imaging/ossimImageGaussianFilter.cpp 
           src/ossim/imaging/ossimImageGeometry.cpp 
           src/ossim/imaging/ossimImageGeometryFactory.cpp 
           src/ossim/imaging/ossimImageGeometryRegistry.cpp 
           src/ossim/imaging/ossimImageHandler.cpp 
           src/ossim/imaging/ossimImageHandlerFactory.cpp 
           src/ossim/imaging/ossimImageHandlerFactoryBase.cpp 
           src/ossim/imaging/ossimImageHandlerRegistry.cpp 
           src/ossim/imaging/ossimImageHistogramSource.cpp 
           src/ossim/imaging/ossimImageMetaData.cpp 
           src/ossim/imaging/ossimImageMetaDataWriterFactory.cpp 
           src/ossim/imaging/ossimImageMetaDataWriterFactoryBase.cpp 
           src/ossim/imaging/ossimImageMetaDataWriterRegistry.cpp 
           src/ossim/imaging/ossimImageModel.cpp 
           src/ossim/imaging/ossimImageMosaic.cpp 
           src/ossim/imaging/ossimImageReconstructionFilterFactory.cpp 
           src/ossim/imaging/ossimImageReconstructionFilterRegistry.cpp 
           src/ossim/imaging/ossimImageRenderer.cpp 
           src/ossim/imaging/ossimImageSharpenFilter.cpp 
           src/ossim/imaging/ossimImageSource.cpp 
           src/ossim/imaging/ossimImageSourceFactory.cpp 
           src/ossim/imaging/ossimImageSourceFactoryBase.cpp 
           src/ossim/imaging/ossimImageSourceFactoryRegistry.cpp 
           src/ossim/imaging/ossimImageSourceFilter.cpp 
           src/ossim/imaging/ossimImageSourceHistogramFilter.cpp 
           src/ossim/imaging/ossimImageSourceSequencer.cpp 
           src/ossim/imaging/ossimImageStatisticsSource.cpp 
           src/ossim/imaging/ossimImageToPlaneNormalFilter.cpp 
           src/ossim/imaging/ossimImageWriter.cpp 
           src/ossim/imaging/ossimImageWriterFactory.cpp 
           src/ossim/imaging/ossimImageWriterFactoryBase.cpp 
           src/ossim/imaging/ossimImageWriterFactoryRegistry.cpp 
           src/ossim/imaging/ossimIndexToRgbLutFilter.cpp 
           src/ossim/imaging/ossimIntensityAdjustmentFilter.cpp 
           src/ossim/imaging/ossimJpegMemSrc.cpp 
           src/ossim/imaging/ossimJpegStdIOSrc.cpp 
           src/ossim/imaging/ossimJpegTileSource.cpp 
           src/ossim/imaging/ossimJpegWriter.cpp 
           src/ossim/imaging/ossimJpegYCbCrToRgbSource.cpp 
           src/ossim/imaging/ossimLandsatTileSource.cpp 
           src/ossim/imaging/ossimLandsatTopoCorrectionFilter.cpp 
           src/ossim/imaging/ossimLocalCorrelationFusion.cpp 
           src/ossim/imaging/ossimMapCompositionSource.cpp 
           src/ossim/imaging/ossimMaskFilter.cpp 
           src/ossim/imaging/ossimMaxMosaic.cpp 
           src/ossim/imaging/ossimMeanMedianFilter.cpp 
           src/ossim/imaging/ossimMemoryImageSource.cpp 
           src/ossim/imaging/ossimMetadataFileWriter.cpp 
           src/ossim/imaging/ossimMonoGridRemapEngine.cpp 
           src/ossim/imaging/ossimMultiBandHistogramTileSource.cpp 
           src/ossim/imaging/ossimNBandToIndexFilter.cpp 
           src/ossim/imaging/ossimNitf20Writer.cpp 
           src/ossim/imaging/ossimNitfTileSource.cpp 
           src/ossim/imaging/ossimNitfTileSource_12.cpp 
           src/ossim/imaging/ossimNitfWriter.cpp 
           src/ossim/imaging/ossimNitfWriterBase.cpp 
           src/ossim/imaging/ossimNormalizedRemapTable.cpp 
           src/ossim/imaging/ossimNormalizedS16RemapTable.cpp 
           src/ossim/imaging/ossimNormalizedU11RemapTable.cpp 
           src/ossim/imaging/ossimNormalizedU16RemapTable.cpp 
           src/ossim/imaging/ossimNormalizedU8RemapTable.cpp 
           src/ossim/imaging/ossimNullPixelFlip.cpp 
           src/ossim/imaging/ossimOrthoImageMosaic.cpp 
           src/ossim/imaging/ossimOverviewBuilderBase.cpp 
           src/ossim/imaging/ossimOverviewBuilderFactory.cpp 
           src/ossim/imaging/ossimOverviewBuilderFactoryBase.cpp 
           src/ossim/imaging/ossimOverviewBuilderFactoryRegistry.cpp 
           src/ossim/imaging/ossimOverviewSequencer.cpp 
           src/ossim/imaging/ossimPixelFlipper.cpp 
           src/ossim/imaging/ossimPolyCutter.cpp 
           src/ossim/imaging/ossimQbTileFilesHandler.cpp 
           src/ossim/imaging/ossimQuickbirdNitfTileSource.cpp 
           src/ossim/imaging/ossimQuickbirdTiffTileSource.cpp 
           src/ossim/imaging/ossimReadmeFileWriter.cpp 
           src/ossim/imaging/ossimRectangleCutFilter.cpp 
           src/ossim/imaging/ossimResampler.cpp 
           src/ossim/imaging/ossimRgbGridRemapEngine.cpp 
           src/ossim/imaging/ossimRgbImage.cpp 
           src/ossim/imaging/ossimRgbToGreyFilter.cpp 
           src/ossim/imaging/ossimRgbToHsiSource.cpp 
           src/ossim/imaging/ossimRgbToHsvSource.cpp 
           src/ossim/imaging/ossimRgbToIndexFilter.cpp 
           src/ossim/imaging/ossimRgbToJpegYCbCrSource.cpp 
           src/ossim/imaging/ossimRLevelFilter.cpp 
           src/ossim/imaging/ossimRpfCacheTileSource.cpp 
           src/ossim/imaging/ossimS16ImageData.cpp 
           src/ossim/imaging/ossimScalarRemapper.cpp 
           src/ossim/imaging/ossimScaleFilter.cpp 
           src/ossim/imaging/ossimSFIMFusion.cpp 
           src/ossim/imaging/ossimSICDToDetectedImage.cpp 
           src/ossim/imaging/ossimSingleImageChain.cpp 
           src/ossim/imaging/ossimSrtmTileSource.cpp 
           src/ossim/imaging/ossimSubImageTileSource.cpp 
           src/ossim/imaging/ossimTableRemapper.cpp 
           src/ossim/imaging/ossimTiffOverviewBuilder.cpp 
           src/ossim/imaging/ossimTiffTileSource.cpp 
           src/ossim/imaging/ossimTiffWriter.cpp 
           src/ossim/imaging/ossimTileCache.cpp 
           src/ossim/imaging/ossimTiledImageHandler.cpp 
           src/ossim/imaging/ossimTilePatch.cpp 
           src/ossim/imaging/ossimTiling.cpp 
           src/ossim/imaging/ossimTilingPoly.cpp 
           src/ossim/imaging/ossimTilingRect.cpp 
           src/ossim/imaging/ossimTopographicCorrectionFilter.cpp 
           src/ossim/imaging/ossimTrimFilter.cpp 
           src/ossim/imaging/ossimTwoColorView.cpp 
           src/ossim/imaging/ossimU11ImageData.cpp 
           src/ossim/imaging/ossimU16ImageData.cpp 
           src/ossim/imaging/ossimU8ImageData.cpp 
           src/ossim/imaging/ossimUsgsDemTileSource.cpp 
           src/ossim/imaging/ossimValueAssignImageSourceFilter.cpp 
           src/ossim/imaging/ossimVectorRenderer.cpp 
           src/ossim/imaging/ossimVertexExtractor.cpp 
           src/ossim/imaging/ossimVpfAnnotationCoverageInfo.cpp 
           src/ossim/imaging/ossimVpfAnnotationFeatureInfo.cpp 
           src/ossim/imaging/ossimVpfAnnotationLibraryInfo.cpp 
           src/ossim/imaging/ossimVpfAnnotationSource.cpp 
           src/ossim/imaging/ossimVpfTileSource.cpp 
           src/ossim/imaging/ossimWatermarkFilter.cpp 
           src/ossim/imaging/ossimWorldFileWriter.cpp 
           src/ossim/init/ossimInit.cpp 
           src/ossim/kbool/booleng.cpp 
           src/ossim/kbool/graph.cpp 
           src/ossim/kbool/graphlst.cpp 
           src/ossim/kbool/line.cpp 
           src/ossim/kbool/link.cpp 
           src/ossim/kbool/lpoint.cpp 
           src/ossim/kbool/node.cpp 
           src/ossim/kbool/record.cpp 
           src/ossim/kbool/scanbeam.cpp
           src/ossim/plugin/ossimDynamicLibrary.cpp 
           src/ossim/plugin/ossimPluginLibrary.cpp 
           src/ossim/plugin/ossimSharedObjectBridge.cpp 
           src/ossim/plugin/ossimSharedPluginRegistry.cpp 
           src/ossim/projection/ossimAdjMapModel.cpp 
           src/ossim/projection/ossimAffineProjection.cpp 
           src/ossim/projection/ossimAlbersProjection.cpp 
           src/ossim/projection/ossimAlphaSensor.cpp 
           src/ossim/projection/ossimAlphaSensorHRI.cpp 
           src/ossim/projection/ossimAlphaSensorHSI.cpp 
           src/ossim/projection/ossimApplanixEcefModel.cpp 
           src/ossim/projection/ossimApplanixUtmModel.cpp 
           src/ossim/projection/ossimAzimEquDistProjection.cpp 
           src/ossim/projection/ossimBilinearProjection.cpp 
           src/ossim/projection/ossimBngProjection.cpp 
           src/ossim/projection/ossimBonneProjection.cpp 
           src/ossim/projection/ossimBuckeyeSensor.cpp 
           src/ossim/projection/ossimCadrgProjection.cpp 
           src/ossim/projection/ossimCassiniProjection.cpp 
           src/ossim/projection/ossimCoarseGridModel.cpp 
           src/ossim/projection/ossimCylEquAreaProjection.cpp 
           src/ossim/projection/ossimEckert4Projection.cpp 
           src/ossim/projection/ossimEckert6Projection.cpp 
           src/ossim/projection/ossimEpsgProjectionDatabase.cpp 
           src/ossim/projection/ossimEpsgProjectionFactory.cpp 
           src/ossim/projection/ossimEquDistCylProjection.cpp 
           src/ossim/projection/ossimFcsiModel.cpp 
           src/ossim/projection/ossimGnomonicProjection.cpp 
           src/ossim/projection/ossimIkonosRpcModel.cpp 
           src/ossim/projection/ossimImageProjectionModel.cpp 
           src/ossim/projection/ossimImageViewAffineTransform.cpp 
           src/ossim/projection/ossimImageViewProjectionTransform.cpp 
           src/ossim/projection/ossimImageViewTransform.cpp 
           src/ossim/projection/ossimImageViewTransformFactory.cpp 
           src/ossim/projection/ossimIpodSensor.cpp 
           src/ossim/projection/ossimLambertConformalConicProjection.cpp 
           src/ossim/projection/ossimLandSatModel.cpp 
           src/ossim/projection/ossimLensDistortion.cpp 
           src/ossim/projection/ossimLlxyProjection.cpp 
           src/ossim/projection/ossimMapProjection.cpp 
           src/ossim/projection/ossimMapProjectionFactory.cpp 
           src/ossim/projection/ossimMapProjectionInfo.cpp 
           src/ossim/projection/ossimMapViewController.cpp 
           src/ossim/projection/ossimMeanRadialLensDistortion.cpp 
           src/ossim/projection/ossimMercatorProjection.cpp 
           src/ossim/projection/ossimMgrs.c 
           src/ossim/projection/ossimMillerProjection.cpp 
           src/ossim/projection/ossimMiscProjectionFactory.cpp 
           src/ossim/projection/ossimMollweidProjection.cpp 
           src/ossim/projection/ossimNewZealandMapGridProjection.cpp 
           src/ossim/projection/ossimNitfMapModel.cpp 
           src/ossim/projection/ossimNitfProjectionFactory.cpp 
           src/ossim/projection/ossimNitfRpcModel.cpp 
           src/ossim/projection/ossimObliqueMercatorProjection.cpp 
           src/ossim/projection/ossimOptimizableProjection.cpp 
           src/ossim/projection/ossimOrthoGraphicProjection.cpp 
           src/ossim/projection/ossimPolarst.c 
           src/ossim/projection/ossimPolarStereoProjection.cpp 
           src/ossim/projection/ossimPolyconicProjection.cpp 
           src/ossim/projection/ossimPolynomProjection.cpp 
           src/ossim/projection/ossimPositionQualityEvaluator.cpp 
           src/ossim/projection/ossimPpjFrameSensor.cpp 
           src/ossim/projection/ossimProjection.cpp 
           src/ossim/projection/ossimProjectionFactoryBase.cpp 
           src/ossim/projection/ossimProjectionFactoryRegistry.cpp 
           src/ossim/projection/ossimProjectionViewControllerFactory.cpp 
           src/ossim/projection/ossimQuadProjection.cpp 
           src/ossim/projection/ossimQuickbirdRpcModel.cpp 
           src/ossim/projection/ossimRadialDecentLensDistortion.cpp 
           src/ossim/projection/ossimRpcModel.cpp 
           src/ossim/projection/ossimRpcProjection.cpp 
           src/ossim/projection/ossimRpcSolver.cpp 
           src/ossim/projection/ossimRS1SarModel.cpp 
           src/ossim/projection/ossimSarModel.cpp 
           src/ossim/projection/ossimSensorModel.cpp 
           src/ossim/projection/ossimSensorModelFactory.cpp 
           src/ossim/projection/ossimSensorModelTuple.cpp 
           src/ossim/projection/ossimSinusoid.c 
           src/ossim/projection/ossimSinusoidalProjection.cpp 
           src/ossim/projection/ossimSkyBoxLearSensor.cpp 
           src/ossim/projection/ossimSmacCallibrationSystem.cpp 
           src/ossim/projection/ossimSonomaSensor.cpp 
           src/ossim/projection/ossimSpaceObliqueMercatorProjection.cpp 
           src/ossim/projection/ossimSpot5Model.cpp 
           src/ossim/projection/ossimStatePlaneProjectionInfo.cpp 
           src/ossim/projection/ossimStereographicProjection.cpp 
           src/ossim/projection/ossimTiffProjectionFactory.cpp 
           src/ossim/projection/ossimTranmerc.c 
           src/ossim/projection/ossimTransCylEquAreaProjection.cpp 
           src/ossim/projection/ossimTransMercatorProjection.cpp 
           src/ossim/projection/ossimUps.c 
           src/ossim/projection/ossimUpsProjection.cpp 
           src/ossim/projection/ossimUpspt.cpp 
           src/ossim/projection/ossimUtm.c 
           src/ossim/projection/ossimUtmProjection.cpp 
           src/ossim/projection/ossimUtmpt.cpp 
           src/ossim/projection/ossimVanDerGrintenProjection.cpp 
           src/ossim/projection/ossimWarpProjection.cpp 
           src/ossim/projection/ossimWktProjectionFactory.cpp 
           src/ossim/support_data/ossimAigBounds.cpp 
           src/ossim/support_data/ossimAigDataFileHeader.cpp 
           src/ossim/support_data/ossimAigHeader.cpp 
           src/ossim/support_data/ossimAigIndexFileHeader.cpp 
           src/ossim/support_data/ossimAigStatistics.cpp 
           src/ossim/support_data/ossimAlphaSensorSupportData.cpp 
           src/ossim/support_data/ossimApplanixEOFile.cpp 
           src/ossim/support_data/ossimAuxFileHandler.cpp 
           src/ossim/support_data/ossimCcfInfo.cpp 
           src/ossim/support_data/ossimCeosData.cpp 
           src/ossim/support_data/ossimDemGrid.cpp 
           src/ossim/support_data/ossimDemHeader.cpp 
           src/ossim/support_data/ossimDemInfo.cpp 
           src/ossim/support_data/ossimDemPoint.cpp 
           src/ossim/support_data/ossimDemProfile.cpp 
           src/ossim/support_data/ossimDemStats.cpp 
           src/ossim/support_data/ossimDemUtil.cpp 
           src/ossim/support_data/ossimDoqq.cpp 
           src/ossim/support_data/ossimDtedAcc.cpp 
           src/ossim/support_data/ossimDtedDsi.cpp 
           src/ossim/support_data/ossimDtedHdr.cpp 
           src/ossim/support_data/ossimDtedInfo.cpp 
           src/ossim/support_data/ossimDtedRecord.cpp 
           src/ossim/support_data/ossimDtedUhl.cpp 
           src/ossim/support_data/ossimDtedVol.cpp 
           src/ossim/support_data/ossimEnviHeader.cpp 
           src/ossim/support_data/ossimEnviInfo.cpp 
           src/ossim/support_data/ossimERS.cpp 
           src/ossim/support_data/ossimFfL5.cpp 
           src/ossim/support_data/ossimFfL7.cpp 
           src/ossim/support_data/ossimFfRevb.cpp 
           src/ossim/support_data/ossimFfRevc.cpp 
           src/ossim/support_data/ossimFgdcTxtDoc.cpp 
           src/ossim/support_data/ossimFgdcXmlDoc.cpp 
           src/ossim/support_data/ossimGeoTiff.cpp 
           src/ossim/support_data/ossimIkonosMetaData.cpp 
           src/ossim/support_data/ossimInfoBase.cpp 
           src/ossim/support_data/ossimInfoFactory.cpp 
           src/ossim/support_data/ossimInfoFactoryRegistry.cpp 
           src/ossim/support_data/ossimJ2kCodRecord.cpp 
           src/ossim/support_data/ossimJ2kInfo.cpp 
           src/ossim/support_data/ossimJ2kSizRecord.cpp 
           src/ossim/support_data/ossimJ2kSotRecord.cpp 
           src/ossim/support_data/ossimJp2Info.cpp 
           src/ossim/support_data/ossimJpipMessage.cpp 
           src/ossim/support_data/ossimJpipMessageDecoder.cpp 
           src/ossim/support_data/ossimLasHdr.cpp 
           src/ossim/support_data/ossimLasInfo.cpp 
           src/ossim/support_data/ossimNitfAcftbTag.cpp 
           src/ossim/support_data/ossimNitfAimidbTag.cpp 
           src/ossim/support_data/ossimNitfBlockaTag.cpp 
           src/ossim/support_data/ossimNitfCommon.cpp 
           src/ossim/support_data/ossimNitfCompressionHeader.cpp 
           src/ossim/support_data/ossimNitfCsccgaTag.cpp 
           src/ossim/support_data/ossimNitfCscrnaTag.cpp 
           src/ossim/support_data/ossimNitfCsdidaTag.cpp 
           src/ossim/support_data/ossimNitfCsexraTag.cpp 
           src/ossim/support_data/ossimNitfCsproaTag.cpp 
           src/ossim/support_data/ossimNitfDataExtensionSegment.cpp 
           src/ossim/support_data/ossimNitfDataExtensionSegmentV2_0.cpp 
           src/ossim/support_data/ossimNitfEmbeddedRpfDes.cpp 
           src/ossim/support_data/ossimNitfEngrdaTag.cpp 
           src/ossim/support_data/ossimNitfExoptaTag.cpp 
           src/ossim/support_data/ossimNitfFile.cpp 
           src/ossim/support_data/ossimNitfFileHeader.cpp 
           src/ossim/support_data/ossimNitfFileHeaderV2_0.cpp 
           src/ossim/support_data/ossimNitfFileHeaderV2_1.cpp 
           src/ossim/support_data/ossimNitfFileHeaderV2_X.cpp 
           src/ossim/support_data/ossimNitfGeoPositioningTag.cpp 
           src/ossim/support_data/ossimNitfHistoaTag.cpp 
           src/ossim/support_data/ossimNitfIchipbTag.cpp 
           src/ossim/support_data/ossimNitfImageBand.cpp 
           src/ossim/support_data/ossimNitfImageBandV2_0.cpp 
           src/ossim/support_data/ossimNitfImageBandV2_1.cpp 
           src/ossim/support_data/ossimNitfImageHeader.cpp 
           src/ossim/support_data/ossimNitfImageHeaderV2_0.cpp 
           src/ossim/support_data/ossimNitfImageHeaderV2_1.cpp 
           src/ossim/support_data/ossimNitfImageHeaderV2_X.cpp 
           src/ossim/support_data/ossimNitfImageLut.cpp 
           src/ossim/support_data/ossimNitfImageLutV2_0.cpp 
           src/ossim/support_data/ossimNitfImageLutV2_1.cpp 
           src/ossim/support_data/ossimNitfInfo.cpp 
           src/ossim/support_data/ossimNitfJ2klraTag.cpp 
           src/ossim/support_data/ossimNitfLabelHeader.cpp 
           src/ossim/support_data/ossimNitfLabelHeaderV2_0.cpp 
           src/ossim/support_data/ossimNitfLocalCartographicTag.cpp 
           src/ossim/support_data/ossimNitfLocalGeographicTag.cpp 
           src/ossim/support_data/ossimNitfMstgtaTag.cpp 
           src/ossim/support_data/ossimNitfNameConversionTables.cpp 
           src/ossim/support_data/ossimNitfPiaimcTag.cpp 
           src/ossim/support_data/ossimNitfProjectionParameterTag.cpp 
           src/ossim/support_data/ossimNitfRegisteredTag.cpp 
           src/ossim/support_data/ossimNitfRegisteredTagFactory.cpp 
           src/ossim/support_data/ossimNitfRpcATag.cpp 
           src/ossim/support_data/ossimNitfRpcBase.cpp 
           src/ossim/support_data/ossimNitfRpcBTag.cpp 
           src/ossim/support_data/ossimNitfRpfTagFactory.cpp 
           src/ossim/support_data/ossimNitfSensraTag.cpp 
           src/ossim/support_data/ossimNitfStdidcTag.cpp 
           src/ossim/support_data/ossimNitfSymbolHeader.cpp 
           src/ossim/support_data/ossimNitfSymbolHeaderV2_0.cpp 
           src/ossim/support_data/ossimNitfTagFactory.cpp 
           src/ossim/support_data/ossimNitfTagFactoryRegistry.cpp 
           src/ossim/support_data/ossimNitfTagInformation.cpp 
           src/ossim/support_data/ossimNitfTextHeader.cpp 
           src/ossim/support_data/ossimNitfTextHeaderV2_0.cpp 
           src/ossim/support_data/ossimNitfTextHeaderV2_1.cpp 
           src/ossim/support_data/ossimNitfUnknownTag.cpp 
           src/ossim/support_data/ossimNitfUse00aTag.cpp 
           src/ossim/support_data/ossimNitfVqCompressionHeader.cpp 
           src/ossim/support_data/ossimNmeaMessage.cpp 
           src/ossim/support_data/ossimNmeaMessageSequencer.cpp 
           src/ossim/support_data/ossimPpjFrameSensorFile.cpp 
           src/ossim/support_data/ossimQuickbirdMetaData.cpp 
           src/ossim/support_data/ossimQuickbirdRpcHeader.cpp 
           src/ossim/support_data/ossimQuickbirdTile.cpp 
           src/ossim/support_data/ossimRpfAttributeOffsetRecord.cpp 
           src/ossim/support_data/ossimRpfAttributes.cpp 
           src/ossim/support_data/ossimRpfAttributeSectionSubheader.cpp 
           src/ossim/support_data/ossimRpfBoundaryRectRecord.cpp 
           src/ossim/support_data/ossimRpfBoundaryRectSectionSubheader.cpp 
           src/ossim/support_data/ossimRpfBoundaryRectTable.cpp 
           src/ossim/support_data/ossimRpfColorConverterOffsetRecord.cpp 
           src/ossim/support_data/ossimRpfColorConverterSubsection.cpp 
           src/ossim/support_data/ossimRpfColorConverterTable.cpp 
           src/ossim/support_data/ossimRpfColorGrayscaleOffsetRecord.cpp 
           src/ossim/support_data/ossimRpfColorGrayscaleSubheader.cpp 
           src/ossim/support_data/ossimRpfColorGrayscaleTable.cpp 
           src/ossim/support_data/ossimRpfComponentIdLut.cpp 
           src/ossim/support_data/ossimRpfCompressionLookupOffsetRecord.cpp 
           src/ossim/support_data/ossimRpfCompressionSection.cpp 
           src/ossim/support_data/ossimRpfCompressionSectionSubheader.cpp 
           src/ossim/support_data/ossimRpfCoverageSection.cpp 
           src/ossim/support_data/ossimRpfFrame.cpp 
           src/ossim/support_data/ossimRpfFrameEntry.cpp 
           src/ossim/support_data/ossimRpfFrameFileIndexRecord.cpp 
           src/ossim/support_data/ossimRpfFrameFileIndexSectionSubheader.cpp 
           src/ossim/support_data/ossimRpfFrameFileIndexSubsection.cpp 
           src/ossim/support_data/ossimRpfFrameFileReader.cpp 
           src/ossim/support_data/ossimRpfHeader.cpp 
           src/ossim/support_data/ossimRpfImageDescriptionSubheader.cpp 
           src/ossim/support_data/ossimRpfImageDisplayParameterSubheader.cpp 
           src/ossim/support_data/ossimRpfInfo.cpp 
           src/ossim/support_data/ossimRpfLocationSection.cpp 
           src/ossim/support_data/ossimRpfMaskSubheader.cpp 
           src/ossim/support_data/ossimRpfMaskSubsection.cpp 
           src/ossim/support_data/ossimRpfPathnameRecord.cpp 
           src/ossim/support_data/ossimRpfReplaceUpdateRecord.cpp 
           src/ossim/support_data/ossimRpfReplaceUpdateSectionSubheader.cpp 
           src/ossim/support_data/ossimRpfReplaceUpdateTable.cpp 
           src/ossim/support_data/ossimRpfToc.cpp 
           src/ossim/support_data/ossimRpfTocEntry.cpp 
           src/ossim/support_data/ossimSpaceImagingGeom.cpp 
           src/ossim/support_data/ossimSpotDimapSupportData.cpp 
           src/ossim/support_data/ossimSrcRecord.cpp 
           src/ossim/support_data/ossimSrtmFilename.cpp 
           src/ossim/support_data/ossimSrtmSupportData.cpp 
           src/ossim/support_data/ossimSupportFilesList.cpp 
           src/ossim/support_data/ossimTiffInfo.cpp 
           src/ossim/support_data/ossimTiffWorld.cpp 
           src/ossim/util/ossimBatchTest.cpp 
           src/ossim/util/ossimElevUtil.cpp 
           src/ossim/util/ossimFileWalker.cpp 
           src/ossim/util/ossimImageUtil.cpp 
           src/ossim/util/ossimInfo.cpp 
           src/ossim/util/ossimRpfUtil.cpp 
           src/ossim/vec/ossimVpfBoundingRecordTable.cpp 
           src/ossim/vec/ossimVpfCoverage.cpp 
           src/ossim/vec/ossimVpfDatabase.cpp 
           src/ossim/vec/ossimVpfDatabaseHeader.cpp 
           src/ossim/vec/ossimVpfDatabaseHeaderTableValidator.cpp 
           src/ossim/vec/ossimVpfExtent.cpp 
           src/ossim/vec/ossimVpfFeatureClass.cpp 
           src/ossim/vec/ossimVpfFeatureClassSchema.cpp 
           src/ossim/vec/ossimVpfLibrary.cpp 
           src/ossim/vec/ossimVpfLibraryAttributeTableValidator.cpp 
           src/ossim/vec/ossimVpfTable.cpp
           src/ossim/parallel/ossimIgen.cpp 
           src/ossim/parallel/ossimImageChainMtAdaptor.cpp 
           src/ossim/parallel/ossimImageHandlerMtAdaptor.cpp 
           src/ossim/parallel/ossimImageMpiMWriterSequenceConnection.cpp 
           src/ossim/parallel/ossimImageMpiSWriterSequenceConnection.cpp 
           src/ossim/parallel/ossimJob.cpp 
           src/ossim/parallel/ossimJobMultiThreadQueue.cpp 
           src/ossim/parallel/ossimJobQueue.cpp 
           src/ossim/parallel/ossimJobThreadQueue.cpp 
           src/ossim/parallel/ossimMpi.cpp 
           src/ossim/parallel/ossimMpiMasterOverviewSequencer.cpp 
           src/ossim/parallel/ossimMpiSlaveOverviewSequencer.cpp 
           src/ossim/parallel/ossimMultiThreadSequencer.cpp 
           src/ossim/parallel/ossimOrthoIgen.cpp   )






SET (LIB_TYPE SHARED)
ADD_DEFINITIONS(-D_AFXEXT)
ADD_DEFINITIONS(-D_AFXDLL)
ADD_DEFINITIONS(-DOSSIMMAKINGDLL)
SET (CMAKE_MFC_FLAG 0)


ADD_LIBRARY(${PROJECT_NAME} ${LIB_TYPE} ${BASE_SRC})


set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "/MP" )


TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
                      optimized freetype242 debug freetype242_D 
                      libtiff
                      geotiff  
                      debug ${JPEG_LINK_DIR}/libjpegd.lib  optimized ${JPEG_LINK_DIR}/libjpeg.lib 
                      debug OpenThreadsd optimized OpenThreads
                      )




set_target_properties (${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY  ${OUTPUT_BINDIR})
set_target_properties (${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG  ${OUTPUT_BINDIR})
set_target_properties (${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE   ${OUTPUT_BINDIR})

set_target_properties (${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY  ${OUTPUT_BINDIR})
set_target_properties (${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG  ${OUTPUT_BINDIR})
set_target_properties (${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_RELEASE    ${OUTPUT_BINDIR})
